bk_ida/gccida/c0/cse_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5219:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5219:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5243:6: error: use of undeclared identifier 'v32'
rtx *v32; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5248:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5248:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5252:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5280:6: error: use of undeclared identifier 'v69'
rtx *v69; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5282:4: error: expected ';' after expression
rtx v71; // [rsp+10h] [rbp-530h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5282:5: error: use of undeclared identifier 'v71'
rtx v71; // [rsp+10h] [rbp-530h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5284:4: error: expected ';' after expression
rtx v73; // [rsp+20h] [rbp-520h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5284:5: error: use of undeclared identifier 'v73'
rtx v73; // [rsp+20h] [rbp-520h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5312:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v101; // [rsp+B8h] [rbp-488h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5321:4: error: expected ';' after expression
rtx v110; // [rsp+F8h] [rbp-448h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5321:5: error: use of undeclared identifier 'v110'
rtx v110; // [rsp+F8h] [rbp-448h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5329:4: error: expected ';' after expression
rtx v118; // [rsp+130h] [rbp-410h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5329:5: error: use of undeclared identifier 'v118'
rtx v118; // [rsp+130h] [rbp-410h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5334:6: error: use of undeclared identifier 'v123'
rtx *v123; // [rsp+158h] [rbp-3E8h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5335:4: error: expected ';' after expression
rtx v124; // [rsp+160h] [rbp-3E0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/cse.c:5335:5: error: use of undeclared identifier 'v124'
rtx v124; // [rsp+160h] [rbp-3E0h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_insn/src/obj/cse.o] Error 1
